--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Mortgage Payment Calculator built with React.js & Chart.js"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:title" content="Mortgage Payment Calculator" />
+    <meta property="og:site_name" content="Mortgage Payment Calculator" />
+    <meta property="og:url" content="%PUBLIC_URL%/" />
+    <meta property="og:description" content="A Mortgage Payment Calculator built with React.js & Charts.js">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/og.jpg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
